# sideagent

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
history/: 2026-06-06-benchmark-agent-profiles.md
scripts/: install.sh
skills/agent-offload/: SKILL.md
skills/sideagent/: SKILL.md
src/: config.rs  git_worktree.rs  headless.rs  install_skill.rs  launcher.rs  main.rs  prompt.rs  run.rs
src/monitor/: mod.rs  runs.rs  tui.rs
tests/: cli.rs
