[package]
name = "sideagent"
version = "0.1.5"
edition = "2024"
authors = [""]
description = "Launch coding agents in tmux panes and wait for completion"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3.14"
