[package]
name = "sideagent"
version = "0.1.8"
edition = "2024"
authors = [""]
description = "Run another coding agent from your current session"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ratatui = "0.29"
crossterm = "0.28"
pulldown-cmark = "0.13"

[dev-dependencies]
tempfile = "3.14"
